<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".CartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cart"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/totalItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:visibility="invisible" />
        <TextView
            android:id="@+id/noItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_items_to_display" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <Button
                android:id="@+id/returnToProducts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/return_to_products" />

            <Button
                android:id="@+id/goToCheckout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_to_checkout"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>