<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.card.MaterialCardView
    android:layout_marginTop="20dp"
    android:layout_gravity="center_horizontal"
    android:layout_width="300dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/productImage"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/product_image" />
    </LinearLayout>
    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/name"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/qtyText"
                android:text="@string/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"/>
            <Spinner
                android:id="@+id/qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <Button
            android:text="@string/view_details"
            android:id="@+id/viewDetails"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content" />
        <Button
            android:text="@string/add_to_cart"
            android:id="@+id/addToCart"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content" />
    </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
</LinearLayout>